# synthesizer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  MANIFEST.in  README.md  attenuation.py  conftest.py  parameters.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  synth.py
.github/: pull_request_template.md
.github/workflows/: deploy.yml  main.yml  publish_docs.yml  python-app.yml  static.yml
broken_examples/cloudy/: analyse_lines.py  run_cloudy.py
broken_examples/cosmo/: camels_survey.py
broken_examples/grids/: blackbody.py  yggdrasil_example.py
docs/: CONTRIBUTING.md  Makefile  README.md  requirements.txt
docs/source/: API.rst  abundances.ipynb  abundances.rst  conf.py  cosmo.rst  emission_model.ipynb  filters.ipynb  filters.rst  generating_spectra.rst  grid_generation.rst  grids.ipynb  grids.rst  grids_example.ipynb  igm.rst  index.rst  installation.rst  lines.ipynb  miscellany.rst  parametric.rst  sed.ipynb  spectra.rst  units.ipynb
example/: parameters.py  process_cloudy.py  setup_cloudy.py  synth.py
examples/: README.md  abundances.py  camels.py  download_camels.sh  dustcurves.py  filters.py  igm.py  photometry.py  plot_quiescent_colours.py  plot_spectra_age.py  sed.py
examples/binned/: lines.py  make_constant_sed.py  make_sed.py  make_sfzh.py  quiescent_colours.py  sed.py  sfzh.py
examples/blackholes/: plot_single_bh_test.py
examples/cloudy/: README.rst  analyse_cloudy.py  analyse_lines.py  calculate_Q.py  plot_lines.py  process_cloudy.py  read_linelist.py  read_lines.py  run_cloudy.py
examples/cosmo/: camels.py  camels_survey.py  cosmo_example.py  flares.py  luminosity_function_integration_test.py  plot_camels.py  plot_cosmo_example.py  plot_integration_test.py  plot_parametric_young_stars.py  plot_sc-sam.py  plot_test_age_lookup.py  plot_test_aperture_mask.py  plot_test_los_spectra.py  plot_test_parametric_young_stars.py  test_aperture_mask.py  test_los_spectra.py  test_parametric_young_stars.py
examples/general/: abundances.py  dustcurves.py  plot_abundances.py  plot_dustcurves.py  plot_filters.py  plot_igm.py  plot_line_ratios.py  plot_photometry.py  plot_quiescent_colours.py  plot_spectra.py  plot_spectra_age.py  sed.py
examples/grids/: LyA_testing.py  balmer_break.py  explore_grid.py  get_lines.py  grid_explorer.ipynb  line_cont.ipynb  line_cont.py  lines.py  plot_interp_grid.py  plot_line_cont.py  plot_lines.py  plot_log10Q.py  plot_spectra.py  plot_spectra_age.py  plot_spectra_by_age.py  plot_spectra_cloudy.py  quiescent_colours.py  sed_example.py  spectra_cloudy_comparison.py  yggdrasil_example.py
examples/imaging/: image_addition.py  plot_aperture_sum.py  plot_image_addition.py
examples/misc/: balmer_break.py
examples/parametric/: balmer_break.py  compare_sfhs.ipynb  create_image.py  create_parametric_image.py  generate_composite_galaxy.ipynb  generate_composite_galaxy.py  generate_lines.py  generate_observed_sed.py  generate_sed.py  lines.py  make_constant_sed.py  make_image.py  make_sed.py  make_sfzh.py  plot_compare_sfhs.py  plot_composite_galaxy.py  plot_create_image.py  plot_delta_lambda.py  plot_dense_basis.py  plot_equivalent_width.py  plot_generate_lines.py  plot_generate_sed.py  plot_make_sfzh.py  plot_morphology.py  plot_observed_sed.py  plot_scale_by_luminosity.py  plot_sed.py  quiescent_colours.py
examples/particle/: compare_parametric_particle.py  create_flux_image_multifilter.py  (+25 more)
generate_grids/: create_3D_grid.py  create_ND_grid.py  download_grids.py  rebin_3Dgrid.py  rebin_grid.py
grids/: _utils.py  grid_bc03.py  grid_fsps.py  utils.py
install_grids/: grid_bc03.py  install_bc03.py  install_bpass2.2.1.py  install_bpass2.3.py
other_examples/: UV_line_indices.py  eazy_sfh.py  line_ratios.py  plot_equivalent_width.py  plot_spectra_age.py  quiescent_colours.py
profiling/: compare_los_loop_tree.py  image_strong_scaling.py  int_spectra_strong_scaling.py  los_surf_strong_scaling.py  part_spectra_strong_scaling.py  plot_massif.py  profile_mem_int_spectra.py  profile_mem_part_spectra.py  profile_plot.py  profile_time_int_spectra.py  profile_time_part_spectra.py  profiling_utils.py  spectral_cube_strong_scaling.py  strong_scaling_images.py  strong_scaling_int_spectra.py  strong_scaling_los_col_den.py  strong_scaling_part_spectra.py
scaling_tests/: run_filter_weak_scaling_img_test.py  run_part_weak_scaling_img_test.py  run_resolution_weak_scaling_img_test.py  run_survey_photometry_scaling_test.py
synthesizer/: __init__.py  abundances.py  abundances_sw.py  agn.py  art.py  base_galaxy.py  binned.py  blackholes.py  cloudy.py  cloudy_sw.py  dust.py  dust_curves.py  exceptions.py  filters.py  galaxy.py  grid.py  grid_bc03.py  grid_bpass.py  grid_fsps.py  grid_sw.py  igm.py  igm_old.py  kernel_functions.py  line.py  load_data.py  load_sam_data.py  los.py  nebular_processing.py  observations.py  plots.py  plt.py  sed.py  sps_grid.py  stars.py  stats.py  survey.py  units.py  utils.py  weights.py  weights.pyx
tests/: camels_subhalo.hdf5  conftest.py  get_test_grid.sh  test_basic_imaging.py  test_cosmo.py  test_cosmology.py  test_dust_generators.py  test_emissions.py  test_extractors.py  test_filters.py  test_get_param.py  test_grid.py  test_hdf5_loading.py  test_igm.py  test_initialisation.py  test_integration.py  test_line.py  test_los.py  test_morphology.py  test_openmp.py  test_operations.py  test_particle_bh.py  test_particle_imaging.py  test_particle_stars.py  test_particles.py  test_pipeline.py  test_premade_emodels.py  test_sed.py  test_spectra.py  test_template.py  test_transformers.py  test_unit_standardization.py  test_utils.py  test_vel_shift.py
(+499 files in other folders)
